--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -96,8 +96,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: green;
+  border-color: green;
 }
 
 .card h3 {
