update rest of green to primcloud brand blue

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -96,8 +96,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: green;
-  border-color: green;
+  color: #1D4ED8;
+  border-color: #1D4ED8;
 }
 
 .card h3 {
